Role apt-nonfree

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: Inclusion du rôle apt-nonfree
+  import_tasks: apt-nonfree.yml
+
 - name: Mettre à jour les paquets
   apt:
     update_cache: yes
