Fix task apt-nonfree

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,8 +1,3 @@
 ---
-- name: Inclusion du rôle apt-nonfree
-  import_tasks: apt-nonfree.yml
-
-- name: Mettre à jour les paquets
-  apt:
-    update_cache: yes
-    upgrade: dist
+- import_tasks: apt-nonfree.yml
+- import_tasks: upgrade.yml
