--- a/roles/base/tasks/apt-nonfree.yml
+++ b/roles/base/tasks/apt-nonfree.yml
@@ -1,18 +1,8 @@
 ---
-- name: S'assurer que non-free est présent sur toutes les lignes deb/deb-src
+- name: Ajouter non-free et non-free-firmware aux lignes deb/deb-src de sources.list
   become: true
-  ansible.builtin.lineinfile:
+  ansible.builtin.replace:
     path: /etc/apt/sources.list
-    regexp: '^(deb(?:-src)?\\s+\\S+\\s+\\S+\\s+.*)$'
-    line: "{{ item }}"
-  loop: "{{ lookup('file', '/etc/apt/sources.list').splitlines() | map('regex_replace', '^(deb(?:-src)?\\s+\\S+\\s+\\S+\\s+.*)$', '\\1 non-free') | list }}"
-  when: "'non-free' not in item"
-
-- name: S'assurer que non-free-firmware est présent sur toutes les lignes deb/deb-src
-  become: true
-  ansible.builtin.lineinfile:
-    path: /etc/apt/sources.list
-    regexp: '^(deb(?:-src)?\\s+\\S+\\s+\\S+\\s+.*)$'
-    line: "{{ item }}"
-  loop: "{{ lookup('file', '/etc/apt/sources.list').splitlines() | map('regex_replace', '^(deb(?:-src)?\\s+\\S+\\s+\\S+\\s+.*)$', '\\1 non-free-firmware') | list }}"
-  when: "'non-free-firmware' not in item"
+    regexp: '^(deb(?:-src)?\s+\S+\s+\S+\s+.*?main(?:\s+contrib)?)(?!.*non-free)(?!.*non-free-firmware)(.*)$'
+    replace: '\1 non-free non-free-firmware\2'
+    backup: yes
