Base: +wakemeops repo

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 - import_tasks: apt-nonfree.yml
+- import_tasks: wakemeops.yml
 - import_tasks: upgrade.yml
 - import_tasks: packages.yml
 - import_tasks: zellij.yml
