--- a/roles/sudo-user/tasks/user.yml
+++ b/roles/sudo-user/tasks/user.yml
@@ -1,8 +1,8 @@
 ---
-- name: Créer l'utilisateur benben
+- name: Créer l'utilisateur {{ sudo_user }}
   become: true
   ansible.builtin.user:
-    name: benben
+    name: "{{ sudo_user }}"
     shell: /bin/bash
     groups: sudo
     append: yes
