--- a/roles/iut-base/tasks/main.yml
+++ b/roles/iut-base/tasks/main.yml
@@ -2,4 +2,5 @@
 - import_tasks: email.yml
 - import_tasks: apt-conf.yml
 - import_tasks: sudo.yml
+- import_tasks: openssh.yml
 - import_tasks: packages.yml
