--- a/roles/iut-base/tasks/main.yml
+++ b/roles/iut-base/tasks/main.yml
@@ -3,4 +3,5 @@
 - import_tasks: apt-conf.yml
 - import_tasks: sudo.yml
 - import_tasks: openssh.yml
+- import_tasks: cron.yml
 - import_tasks: packages.yml
