--- a/roles/iut-base/tasks/main.yml
+++ b/roles/iut-base/tasks/main.yml
@@ -4,4 +4,5 @@
 - import_tasks: sudo.yml
 - import_tasks: openssh.yml
 - import_tasks: cron.yml
+- import_tasks: ntp.yml
 - import_tasks: packages.yml
