--- a/roles/desktop/tasks/main.yml
+++ b/roles/desktop/tasks/main.yml
@@ -3,3 +3,4 @@
 # Ce fichier importera les différentes tâches à mesure qu'elles seront ajoutées
 
 - import_tasks: brave.yml
+- import_tasks: firefox.yml
