--- a/roles/iut-desktop/tasks/main.yml
+++ b/roles/iut-desktop/tasks/main.yml
@@ -6,4 +6,5 @@
 - import_tasks: android.yml
 - import_tasks: microsoft.yml
 - import_tasks: veyon.yml
+- import_tasks: grub.yml
 - import_tasks: packages.yml
