--- a/roles/desktop/tasks/ghostty.yml
+++ b/roles/desktop/tasks/ghostty.yml
@@ -1,40 +1,37 @@
 ---
-- name: Vérifier si le dépôt Ghostty existe déjà
-  ansible.builtin.stat:
-    path: /etc/apt/sources.list.d/ghostty.list
-  register: ghostty_repo
+- name: Vérifier si Ghostty est déjà installé
+  shell: dpkg-query -W -f='${Status}' ghostty 2>/dev/null | grep -q "install ok installed"
+  register: ghostty_installed
+  failed_when: false
+  changed_when: false
 
-- name: Ajouter le dépôt Ghostty
+- name: Créer un répertoire temporaire pour le téléchargement
   become: true
-  copy:
-    content: "deb http://download.opensuse.org/repositories/home:/clayrisser:/bookworm/Debian_12/ /"
-    dest: /etc/apt/sources.list.d/ghostty.list
-    mode: '0644'
-  when: not ghostty_repo.stat.exists
-  register: ghostty_repo_added
+  file:
+    path: /tmp/ghostty_download
+    state: directory
+    mode: "0755"
+  when: ghostty_installed.rc != 0
 
-- name: Vérifier si la clé GPG de Ghostty existe déjà
-  ansible.builtin.stat:
-    path: /etc/apt/trusted.gpg.d/ghostty.gpg
-  register: ghostty_key
-
-- name: Télécharger et installer la clé GPG de Ghostty
+- name: Télécharger le paquet Ghostty
   become: true
-  shell: |
-    curl -fsSL https://download.opensuse.org/repositories/home:clayrisser:bookworm/Debian_12/Release.key | gpg --dearmor > /etc/apt/trusted.gpg.d/ghostty.gpg
-  args:
-    creates: /etc/apt/trusted.gpg.d/ghostty.gpg
-  when: not ghostty_key.stat.exists
-  register: ghostty_key_added
+  get_url:
+    url: https://github.com/mkasberg/ghostty-ubuntu/releases/download/1.1.3-0-ppa2/ghostty_1.1.3-0.ppa2_amd64_24.10.deb
+    dest: /tmp/ghostty_download/ghostty.deb
+    mode: "0644"
+  when: ghostty_installed.rc != 0
+  register: ghostty_downloaded
 
-- name: Mettre à jour les dépôts APT
+- name: Installer le paquet Ghostty
   become: true
   apt:
-    update_cache: yes
-  when: ghostty_repo_added is changed or ghostty_key_added is changed
-
-- name: Installer Ghostty
-  become: true
-  apt:
-    name: ghostty
+    deb: /tmp/ghostty_download/ghostty.deb
     state: present
+  when: ghostty_installed.rc != 0
+
+- name: Nettoyer le répertoire temporaire
+  become: true
+  file:
+    path: /tmp/ghostty_download
+    state: absent
+  when: ghostty_installed.rc != 0
