--- a/roles/desktop/tasks/main.yml
+++ b/roles/desktop/tasks/main.yml
@@ -6,4 +6,5 @@
 - import_tasks: firefox.yml
 - import_tasks: ghostty.yml
 - import_tasks: wezterm.yml
+- import_tasks: localsend.yml
 - import_tasks: packages.yml
