--- a/roles/desktop/tasks/main.yml
+++ b/roles/desktop/tasks/main.yml
@@ -7,4 +7,5 @@
 - import_tasks: ghostty.yml
 - import_tasks: wezterm.yml
 - import_tasks: localsend.yml
+- import_tasks: burpsuite.yml
 - import_tasks: packages.yml
