role sudo-user: password

--- a/roles/sudo-user/tasks/main.yml
+++ b/roles/sudo-user/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 - import_tasks: user.yml
+- import_tasks: password.yml
 - import_tasks: sudo.yml
 - import_tasks: pkgx.yml
 - import_tasks: dotfiles.yml
