--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -15,6 +15,7 @@
       - clang-tools
       - curl
       - clusterssh
+      - czkawka-cli
       - detox
       - diffoscope-minimal
       - direnv
@@ -83,6 +84,7 @@
       - python3-pip
       - python3-venv
       - ranger
+      - reptyr
       - restic
       - resticprofile
       - resvg
