--- a/roles/iut-pedago/tasks/packages.yml
+++ b/roles/iut-pedago/tasks/packages.yml
@@ -4,6 +4,7 @@
   apt:
     name:
       - bc
+      - byobu
       - doc-base
       - doxygen
       - doxygen-doc
@@ -48,7 +49,9 @@
       - rcs
       - rlwrap
       - r-recommended
+      - screen
       - subversion
+      - tmux
       - valgrind
       - zsh
     state: present
