--- a/roles/desktop/tasks/main.yml
+++ b/roles/desktop/tasks/main.yml
@@ -2,6 +2,7 @@
 # Tâches pour le rôle desktop
 # Ce fichier importera les différentes tâches à mesure qu'elles seront ajoutées
 
+- import_tasks: packagekit.yml
 - import_tasks: brave.yml
 - import_tasks: firefox.yml
 - import_tasks: ghostty.yml
