Fix tâches sudo

--- a/roles/iut-desktop/tasks/sudo.yml
+++ b/roles/iut-desktop/tasks/sudo.yml
@@ -4,14 +4,14 @@
   register: hostname_result
   changed_when: false
 
-- name: Installer la configuration SSH pour les postes de travail
+- name: Créer le fichier sudoers pour ansible-postes
   become: true
   copy:
-    src: ssh/files/50-desktop.conf
-    dest: /etc/ssh/sshd_config.d/50-desktop.conf
-    mode: '0750'
+    src: sudo/files/ansible-postes
+    dest: /etc/sudoers.d/ansible-postes
+    mode: '0440'
     owner: root
     group: root
-    validate: cat %s
+    validate: 'visudo -cf %s'
     backup: yes
   when: hostname_result.stdout != 'LINSERV-INFO-01'
