+teams-for-linux

--- a/roles/iut-desktop/tasks/packages.yml
+++ b/roles/iut-desktop/tasks/packages.yml
@@ -68,6 +68,7 @@
       - remmina-plugin-vnc
       - scite
       - ssh-askpass-gnome
+      - teams-for-linux
       - terminator
       - texlive
       - texlive-lang-french
